attempt to fix strange zooming issue on iphone

--- a/root/src/App.css
+++ b/root/src/App.css
@@ -12,6 +12,7 @@ header {
     position: relative;
 }
 #root > article {
+    position: relative;
     width: calc(100% - 2rem);
     height: calc(100% - 3rem);
     outline: 1px solid var(--lighter-25);
