--- a/root/src/components/MapLoading.css
+++ b/root/src/components/MapLoading.css
@@ -1,8 +1,10 @@
 .outer {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
     z-index: 1900;
+    margin: auto;
 }
 .inner {
     position: absolute;
