--- a/root/src/pages/Login.css
+++ b/root/src/pages/Login.css
@@ -13,7 +13,7 @@
     gap: 1rem;
     font-size: 16px;
 }
-#loginForm p {
+#loginForm > p {
     font-size: 16px;
 }
 #loginForm > label {
