--- a/root/src/pages/MyMap.css
+++ b/root/src/pages/MyMap.css
@@ -1,10 +1,7 @@
 .leaflet-container {
-    position: relative;
-    width: calc(100% - 2rem);
-    height: calc(100% - 3rem);
-    margin: auto;
-    outline: 1px solid var(--lighter-25);
-    border-radius: 0.5rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 .leaflet-tile-pane {
     filter: invert(10%);
